packages/macros/src/tests/snapshots/openzeppelin_macros__tests__test_with_components__with_erc20_no_hooks_impl.snap
---
source: src/tests/test_with_components.rs
expression: result
snapshot_kind: text
---
TokenStream:

#[starknet::contract]
pub mod MyToken {
    use openzeppelin_token::erc20::DefaultConfig;
    use starknet::ContractAddress;

    #[storage]
    pub struct Storage {
        #[substorage(v0)]
        erc20: ERC20Component::Storage,
    }

    #[constructor]
    fn constructor(ref self: ContractState) {
        self.erc20.initializer("MyToken", "MTK");
    }
    use openzeppelin_token::erc20::ERC20Component;

    component!(path: ERC20Component, storage: erc20, event: ERC20Event);

    impl ERC20InternalImpl = ERC20Component::InternalImpl<ContractState>;

    #[event]
    #[derive(Drop, starknet::Event)]
    enum Event {
        #[flat]
        ERC20Event: ERC20Component::Event,
    }
}


Diagnostics:

====
Warning: The ERC20 component requires an implementation of the ERC20HooksTrait in scope and
it looks like it is missing.

You can use the ERC20HooksEmptyImpl implementation by importing it:

`use openzeppelin_token::erc20::ERC20HooksEmptyImpl;`
====

AuxData:

None
