packages/macros/src/tests/snapshots/openzeppelin_macros__tests__test_with_components__with_erc20_votes_no_hook_call.snap
---
source: src/tests/test_with_components.rs
expression: result
---
TokenStream:

#[starknet::contract]
pub mod MyToken {
    use openzeppelin_token::erc20::{DefaultConfig, ERC20HooksEmptyImpl};
    use openzeppelin_utils::cryptography::snip12::SNIP12Metadata;
    #[storage]
    pub struct Storage {
        #[substorage(v0)]
        pub erc20: ERC20Component::Storage,
        #[substorage(v0)]
        pub votes: VotesComponent::Storage,
        #[substorage(v0)]
        pub nonces: NoncesComponent::Storage,
    }
    pub impl SNIP12MetadataImpl of SNIP12Metadata {
        fn name() -> felt252 {
            "DAPP_NAME"
        }
        fn version() -> felt252 {
            "DAPP_VERSION"
        }
    }
    #[constructor]
    fn constructor(ref self: ContractState) {
        self.erc20.initializer("MyToken", "MTK");
    }
    use openzeppelin_governance::votes::VotesComponent;
    use openzeppelin_token::erc20::ERC20Component;
    use openzeppelin_utils::nonces::NoncesComponent;

    component!(path: ERC20Component, storage: erc20, event: ERC20Event);
    component!(path: VotesComponent, storage: votes, event: VotesEvent);
    component!(path: NoncesComponent, storage: nonces, event: NoncesEvent);

    impl ERC20InternalImpl = ERC20Component::InternalImpl<ContractState>;
    impl VotesInternalImpl = VotesComponent::InternalImpl<ContractState>;
    impl NoncesInternalImpl = NoncesComponent::InternalImpl<ContractState>;

    #[event]
    #[derive(Drop, starknet::Event)]
    enum Event {
        #[flat]
        ERC20Event: ERC20Component::Event,
        #[flat]
        VotesEvent: VotesComponent::Event,
        #[flat]
        NoncesEvent: NoncesComponent::Event,
    }
}


Diagnostics:

====
Warning: The Votes component requires calling `self.votes.transfer_voting_units(...)` from the
token update hooks, and it looks like it is missing.

This may lead to incorrect voting units and checkpoint tracking.
====

AuxData:

None
