packages/macros/src/tests/snapshots/openzeppelin_macros__tests__test_with_components__with_erc2981.snap
---
source: src/tests/test_with_components.rs
expression: result
snapshot_kind: text
---
TokenStream:

#[starknet::contract]
pub mod MyContract {
    use openzeppelin_token::common::erc2981::DefaultConfig;
    use starknet::ContractAddress;

    #[storage]
    pub struct Storage {
        #[substorage(v0)]
        pub erc2981: ERC2981Component::Storage,
    }

    #[constructor]
    fn constructor(ref self: ContractState, default_royalty_receiver: ContractAddress) {
        self.erc2981.initializer(default_royalty_receiver, 0);
    }

    use openzeppelin_token::common::erc2981::ERC2981Component;

    component!(path: ERC2981Component, storage: erc2981, event: ERC2981Event);

    impl ERC2981InternalImpl = ERC2981Component::InternalImpl<ContractState>;

    #[event]
    #[derive(Drop, starknet::Event)]
    enum Event {
        #[flat]
        ERC2981Event: ERC2981Component::Event,
    }
}


Diagnostics:

None

AuxData:

None
