packages/macros/src/tests/snapshots/openzeppelin_macros__tests__test_with_components__with_erc2981_no_config.snap
---
source: src/tests/test_with_components.rs
expression: result
snapshot_kind: text
---
TokenStream:

#[starknet::contract]
pub mod MyContract {
    use starknet::ContractAddress;

    #[storage]
    pub struct Storage {
        #[substorage(v0)]
        erc2981: ERC2981Component::Storage,
    }

    #[constructor]
    fn constructor(ref self: ContractState, default_royalty_receiver: ContractAddress) {
        self.erc2981.initializer(default_royalty_receiver, 0);
    }
    use openzeppelin_token::common::erc2981::ERC2981Component;

    component!(path: ERC2981Component, storage: erc2981, event: ERC2981Event);

    impl ERC2981InternalImpl = ERC2981Component::InternalImpl<ContractState>;

    #[event]
    #[derive(Drop, starknet::Event)]
    enum Event {
        #[flat]
        ERC2981Event: ERC2981Component::Event,
    }
}


Diagnostics:

====
Warning: The ERC2981 component requires an ImmutableConfig implementation in scope. It looks like this implementation is missing.

You can use the default implementation by importing:

`use openzeppelin_token::common::erc2981::DefaultConfig;`
====

AuxData:

None
